--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8088
 keycloak:
-  base-url: http://localhost:8080/auth
+  base-url: http://localhost:8080/realms/v1/protocol/openid-connect/token/introspect
   realm: v1
   client-id: test
   client-secret: 6AxzOF92ephN5G7P15QQGG4hCG8bfPNI
