--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -9,3 +9,21 @@ keycloak:
   realm: cvproject
   client-id: react-auth
   client-secret: oLTNsGCxnKA6mPxcmnQuEuHApBi5x9Jo
+api:
+  prefix: api
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/cvproject?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    #password:
+    password: 123
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
