--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -13,7 +13,7 @@ api:
   prefix: api
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cvproject
+    url: jdbc:mysql://localhost:3306/tetsdb
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
