--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8088
 
 fe:
-  base-url: http://localhost:3000
+  base-url: http://localhost:3001
 
 keycloak:
   base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
@@ -13,12 +13,12 @@ api:
   prefix: api
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/tetsdb
+    url: jdbc:mysql://localhost:3306/cvproject
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     #password:
-    password: 12345678
+    password: 123
   jpa:
     show-sql: true
     hibernate:
