--- a/cvproject-ui/package.json
+++ b/cvproject-ui/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.0",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "json-server": "^1.0.0-alpha.23",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
@@ -17,7 +18,8 @@
     "react-oidc-context": "^3.0.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
