--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8088
 
 fe:
-  base-url: http://localhost:3001
+  base-url: http://localhost:3000
 
 keycloak:
   base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
@@ -13,7 +13,7 @@ api:
   prefix: api
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cvproject
+    url: jdbc:mysql://localhost:3306/tetsdb
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
@@ -27,3 +27,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
