--- a/cvproject-ui/package.json
+++ b/cvproject-ui/package.json
@@ -15,11 +15,11 @@
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.1",
     "react-oidc-context": "^3.0.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
