--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -2,18 +2,26 @@ server:
   port: 8088
 
 fe:
-  base-url: http://localhost:3000
+#  base-url: http://localhost:3000
+  #  Cong Huy config
+  base-url: http://localhost:3001
 
 keycloak:
+  #  base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
+  #  realm: test
+  #  client-id: test
+  #  client-secret: XZFD3f6K87mYWJRD36Ug0zfg4YAmEhEi
+
+  #Cong Huy config
   base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
-  realm: test
-  client-id: test
-  client-secret: XZFD3f6K87mYWJRD36Ug0zfg4YAmEhEi
+  realm: cvproject
+  client-id: react-auth
+  client-secret: oLTNsGCxnKA6mPxcmnQuEuHApBi5x9Jo
 api:
   prefix: api
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/tetsdb
+    url: jdbc:mysql://localhost:3306/cvproject
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
