--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -21,12 +21,13 @@ api:
   prefix: api
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cvproject
+    url: jdbc:mysql://localhost:3306/tetsdb
+#    url: jdbc:mysql://localhost:3306/cvproject
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    #password:
-    password: 123
+    #password:1234
+    password: 12345678
   jpa:
     show-sql: true
     hibernate:
