--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     #password:1234
-    password: 12345678
+    password: 123
   jpa:
     show-sql: true
     hibernate:
