--- a/cvproject-ui/package.json
+++ b/cvproject-ui/package.json
@@ -22,10 +22,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "set PORT=3001 && react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
@@ -48,7 +48,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.18",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "customize-cra": "^1.0.0",
     "postcss": "^8.4.35",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.1"
   }
 }
