feat: chỉnh sửa update status, search

--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-   password: 12345678
+    password: 123
 
   jpa:
     show-sql: true
