--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -21,15 +21,15 @@ api:
   prefix: api
 spring:
   datasource:
-    #    url: jdbc:mysql://localhost:3306/tetsdb
-    url: jdbc:mysql://localhost:3306/cvproject
+    url: jdbc:mysql://localhost:3306/tetsdb
+    #url: jdbc:mysql://localhost:3306/cvproject
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 123
+    password: 12345678
 
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: none
     properties:
@@ -39,3 +39,9 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
+logging:
+  level:
+    root: INFO
+  pattern:
+    console: "%clr(%d{yyyy-MM-dd E HH:mm:ss}){cyan} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr(:){faint} %m%n%clr(${LOG_EXCEPTION_CONVERSION_WORD:%wEx}){red}"
