--- a/cvproject-ui/package.json
+++ b/cvproject-ui/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.15.0",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "json-server": "^1.0.0-alpha.23",
     "oidc-client-ts": "^3.0.1",
     "react": "^18.2.0",
