--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -21,12 +21,15 @@ api:
   prefix: api
 spring:
   datasource:
-    url: jdbc:mysql://cvproject.mysql.database.azure.com:3306/cvproject?useSSL=true
-    #url: jdbc:mysql://localhost:3306/cvproject
+    # url: jdbc:mysql://cvproject.mysql.database.azure.com:3306/cvproject?useSSL=true
+    url: jdbc:mysql://localhost:3306/cvproject
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 #    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: cvapp
-    password: Khongbietgi1
+    # username: cvapp
+    # password: Khongbietgi1
+
+    username: root
+    password: 123
 
   jpa:
     show-sql: false
