feat: cấu hình eslint for code convention

--- a/cvproject-ui/package.json
+++ b/cvproject-ui/package.json
@@ -34,7 +34,13 @@
         "extends": [
             "react-app",
             "react-app/jest"
-        ]
+        ],
+        "rules": {
+            "quotes": [
+                2,
+                "single"
+            ]
+        }
     },
     "browserslist": {
         "production": [
