--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -1,35 +1,27 @@
 server:
-  port: 8088
+  port: ${SERVER_PORT:8088}
 
 fe:
-  #  base-url: http://localhost:3000
-  #  Cong Huy config
-  base-url: http://localhost:3001
+  base-url: ${FRONTEND_BASE_URL:http://localhost:3001}
 
 keycloak:
-  #  base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
-  #  realm: test
-  #  client-id: test
-  #  client-secret: XZFD3f6K87mYWJRD36Ug0zfg4YAmEhEi
-
-  #Cong Huy config
   base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
-  realm: cvproject
-  client-id: react-auth
-  client-secret: oLTNsGCxnKA6mPxcmnQuEuHApBi5x9Jo
+  realm: ${KEYCLOAK_REALM:cvproject}
+  client-id: ${KEYCLOAK_CLIENT_ID:react-auth}
+  client-secret: ${KEYCLOAK_CLIENT_SECRET:oLTNsGCxnKA6mPxcmnQuEuHApBi5x9Jo}
 api:
   prefix: api
 spring:
   datasource:
     # url: jdbc:mysql://cvproject.mysql.database.azure.com:3306/cvproject?useSSL=true
-    url: jdbc:mysql://localhost:3306/cvproject
+    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/cvproject}
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#    driver-class-name: com.mysql.cj.jdbc.Driver
+    #driver-class-name: com.mysql.cj.jdbc.Driver
     # username: cvapp
     # password: Khongbietgi1
 
-    username: root
-    password: 123
+    username: ${DATABASE_USERNAME:root}
+    password: ${DATABASE_PASSWORD:123}
 
   jpa:
     show-sql: false
