--- a/CVProject_Server/Dockerfile
+++ b/CVProject_Server/Dockerfile
@@ -4,7 +4,8 @@ WORKDIR /app
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 #run image
-RUN ./mvnw dependency:go-offline
+#RUN mvnw ./mvnw dependency:go-offline
+RUN chmod +x mvnw && ./mvnw dependency:go-offline
 COPY src ./src
 #run inside container
 CMD ["./mvnw", "spring-boot:run"]
