--- a/CVProject_Server/docker-compose.yml
+++ b/CVProject_Server/docker-compose.yml
@@ -14,9 +14,9 @@ services:
     ports:
       - "8088:8088"
   nodejs:
-    build: D:\Spring\CV_Project\cvproject-ui
+    build: D:\Self-learn\Spring-Boot\OJT_Project\CV_Project\cvproject-ui
     ports:
-      - "3000:80"
+      - "3001:80"
   db:
     image: mysql:8.3.0
     ports:
@@ -26,6 +26,6 @@ services:
       MYSQL_DATABASE: cvproject
     restart: always
   mail:
-    build: D:\Spring\CV_Project\Mail
+    build: D:\Self-learn\Spring-Boot\OJT_Project\CV_Project\Mail
     ports:
       - "8089:8089"
