--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -14,14 +14,14 @@ api:
 spring:
   datasource:
     # url: jdbc:mysql://cvproject.mysql.database.azure.com:3306/cvproject?useSSL=true
-    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/cvproject}
+    url: ${DATABASE_URL:jdbc:mysql://db:3306/tetsdb}
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     #driver-class-name: com.mysql.cj.jdbc.Driver
     # username: cvapp
     # password: Khongbietgi1
 
     username: ${DATABASE_USERNAME:root}
-    password: ${DATABASE_PASSWORD:123}
+    password: ${DATABASE_PASSWORD:12345678}
 
   jpa:
     show-sql: false
