--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ fe:
 keycloak:
   base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
   realm: ${KEYCLOAK_REALM:cvproject}
-  client-id: ${KEYCLOAK_CLIENT_ID:react-auth}
+  client-id: ${KEYCLOAK_CLIENT_ID:test}
   client-secret: ${KEYCLOAK_CLIENT_SECRET:oLTNsGCxnKA6mPxcmnQuEuHApBi5x9Jo}
 api:
   prefix: api
