--- a/CVProject_Server/src/main/resources/application.yml
+++ b/CVProject_Server/src/main/resources/application.yml
@@ -2,26 +2,26 @@ server:
   port: ${SERVER_PORT:8088}
 
 fe:
-  base-url: ${FRONTEND_BASE_URL:http://localhost:3001}
+  base-url: ${FRONTEND_BASE_URL:https://mystorageaccount4521.z7.web.core.windows.net}
 
 keycloak:
-  base-url: http://localhost:8080/realms/cvproject/protocol/openid-connect/token/introspect
-  realm: ${KEYCLOAK_REALM:cvproject}
+  base-url: https://qn24-cpl-2024-02.azurewebsites.net/realms/test/protocol/openid-connect/token/introspect
+  realm: ${KEYCLOAK_REALM:test}
   client-id: ${KEYCLOAK_CLIENT_ID:test}
-  client-secret: ${KEYCLOAK_CLIENT_SECRET:oLTNsGCxnKA6mPxcmnQuEuHApBi5x9Jo}
+  client-secret: ${KEYCLOAK_CLIENT_SECRET:XZFD3f6K87mYWJRD36Ug0zfg4YAmEhEi}
 api:
   prefix: api
 spring:
   datasource:
-    # url: jdbc:mysql://cvproject.mysql.database.azure.com:3306/cvproject?useSSL=true
-    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/cvproject}
+     url: jdbc:mysql://cvproject.mysql.database.azure.com:3306/cvproject?useSSL=true
+#    url: ${DATABASE_URL:jdbc:mysql://localhost:3306/cvproject}
     #url: jdbc:mysql://localhost:3306/ShopApp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     #driver-class-name: com.mysql.cj.jdbc.Driver
-    # username: cvapp
-    # password: Khongbietgi1
+     username: cvapp
+     password: Khongbietgi1
 
-    username: ${DATABASE_USERNAME:root}
-    password: ${DATABASE_PASSWORD:123}
+#    username: ${DATABASE_USERNAME:root}
+#    password: ${DATABASE_PASSWORD:123}
 
   jpa:
     show-sql: false
