--- a/cvproject-ui/.env
+++ b/cvproject-ui/.env
@@ -1,6 +1,6 @@
 REACT_APP_API_URL=http://localhost:8088
 REACT_APP_PROJECT_URL=http://localhost:3001
 
-REACT_APP_OIDC_AUTHORITY=http://localhost:8080/realms/test
+REACT_APP_OIDC_AUTHORITY=https://qn24-cpl-2024-02.azurewebsites.net/realms/test
 REACT_APP_OIDC_CLIENT_ID=test
 REACT_APP_OIDC_CLIENT_SECRET=XZFD3f6K87mYWJRD36Ug0zfg4YAmEhEi
