--- a/cvproject-ui/.env
+++ b/cvproject-ui/.env
@@ -1,5 +1,5 @@
-REACT_APP_API_URL=http://localhost:8088
-REACT_APP_PROJECT_URL=http://localhost:3001
+REACT_APP_API_URL=cvaps.azurewebsites.net
+REACT_APP_PROJECT_URL=https://kind-field-04c848a00.5.azurestaticapps.net
 
 REACT_APP_OIDC_AUTHORITY=https://qn24-cpl-2024-02.azurewebsites.net/realms/test
 REACT_APP_OIDC_CLIENT_ID=test
