--- a/cvproject-ui/.env
+++ b/cvproject-ui/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=cvaps.azurewebsites.net
+REACT_APP_API_URL=https://cvaps.azurewebsites.net
 REACT_APP_PROJECT_URL=https://kind-field-04c848a00.5.azurestaticapps.net
 
 REACT_APP_OIDC_AUTHORITY=https://qn24-cpl-2024-02.azurewebsites.net/realms/test
